Fix field alignment for metric view (#2811)
* [ML-9511] create model registry link in the main UI

* fixed trailing white spaces

* prettier js format

* remove mydb.sqlite

* fix css related issues

* [ML-9064] fix field alignment for metric view

* conditionally apply 'justify-content: center' based on the chart

* conditionally apply 'justify-content: center' based on the chart

--- a/mlflow/server/js/src/experiment-tracking/components/MetricView.css
+++ b/mlflow/server/js/src/experiment-tracking/components/MetricView.css
@@ -30,7 +30,6 @@ div.MetricView h1 {
 .metrics-plot-container .plot-controls {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   min-height: 500px;
 }
 
